# rusty

./: Cargo.toml  memory.x  openocd.cfg  openocd.gdb
.cargo/: config
lib/portable/: Cargo.toml
lib/portable/src/: button.rs  led.rs  lib.rs
lib/serial-log/: Cargo.toml
lib/serial-log/src/: lib.rs
lib/stm32f407-audio/: Cargo.toml
lib/stm32f407-audio/src/: audio.rs  cs43l22.rs  lib.rs
src/: main.rs  types.rs
