[package]
authors = ["Trent Clarke <trent.clarke@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "rusty"
version = "0.1.0"

[workspace]

[dependencies]
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5.1"
embedded-hal = "0.2.2"
stm32f407-audio = { path = "lib/stm32f407-audio" }
stm32f407g-disc = "0.2.0"
cortex-m-rtfm = { version = "0.4.2", features = ["timer-queue"] }
stm32f4xx-hal = { version = "0.3.0", features = ["stm32f407"] }

# this lets you use `cargo fix`!
[[bin]]
name = "rusty"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
