[package]
authors = ["Trent Clarke <trent.clarke@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "rusty"
version = "0.1.0"

[workspace]

[dependencies]
cortex-m-rtfm = { version = "0.4.2" }
cortex-m-semihosting = "0.3.2"
embedded-hal = "0.2.2"
heapless = "0.4.4"
panic-semihosting = "0.5.1"
portable = { path = "lib/portable" }
serial-log = { path = "lib/serial-log" }
stm32f407-audio = { path = "lib/stm32f407-audio" }
stm32f4xx-hal = { version = "0.5.0", features = ["stm32f407", "rt"] }
nb = "0.1"

# [dependencies.stm32f4xx-hal]
# git = "https://github.com/tcsc/stm32f4xx-hal.git"
# branch = "master" #"stm32704-usart"
# features = ["stm32f407", "rt"]
# version = "0.5"

[dependencies.log]
default-features = false
version = "0.4"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

# this lets you use `cargo fix`!
[[bin]]
name = "rusty"
test = false
bench = false

